<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">

    <shortcut
        android:shortcutId="search"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_search_short"
        android:shortcutLongLabel="@string/shortcut_search_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="uz.hammabop.app://shortcut/search"
            android:targetPackage="uz.hammabop.app"
            android:targetClass="uz.hammabop.app.MainActivity" />
    </shortcut>

    <shortcut
        android:shortcutId="cart"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_cart_short"
        android:shortcutLongLabel="@string/shortcut_cart_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="uz.hammabop.app://shortcut/cart"
            android:targetPackage="uz.hammabop.app"
            android:targetClass="uz.hammabop.app.MainActivity" />
    </shortcut>

    <shortcut
        android:shortcutId="catalog"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_catalog_short"
        android:shortcutLongLabel="@string/shortcut_catalog_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="uz.hammabop.app://shortcut/catalog"
            android:targetPackage="uz.hammabop.app"
            android:targetClass="uz.hammabop.app.MainActivity" />
    </shortcut>

</shortcuts>
